# docpp

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: docpp.PKGBUILD.in  docpp.ebuild.in  docpp.pc.in  docppConfig.cmake
docs/: Doxyfile
examples/: .gitignore  biteme.lol.cpp  hello-world.cpp  speedie-page.cpp
examples/DocppWebsiteTemplate/: .gitignore  CMakeLists.txt
examples/DocppWebsiteTemplate/include/: Endpoint.hpp  Sites.hpp
examples/DocppWebsiteTemplate/src/: Sites.cpp  main.cpp
examples/Hello World/: .gitignore  CMakeLists.txt  main.cpp
examples/biteme.lol/: CMakeLists.txt  main.cpp
include/: docpp.hpp
include/docpp/: docpp.hpp  except.hpp  types.hpp  version.hpp
include/docpp/CSS/: CSS.hpp  color.hpp  color_struct.hpp  color_type_enum.hpp  element.hpp  formatting_enum.hpp  property.hpp  stylesheet.hpp
include/docpp/CSS/impl/: color_conversions.hpp
include/docpp/HTML/: HTML.hpp  document.hpp  element.hpp  formatting_enum.hpp  properties.hpp  property.hpp  section.hpp  tag.hpp  type_enum.hpp
scripts/: docpp_make  generate_manifest
src/: docpp.cpp  version.cpp
src/CSS/: color.cpp  element.cpp  property.cpp  stylesheet.cpp
src/CSS/impl/: color_conversions.cpp
src/HTML/: document.cpp  element.cpp  properties.cpp  property.cpp  section.cpp  tag.cpp
tests/: test.cpp
